<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/blue"
        >

        <ImageButton
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back" />

        <TextView 
            android:id="@+id/title_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:text="@string/title_login"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center"
            />
        <ImageButton
            android:id="@+id/back_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back"
            android:visibility="invisible"
            android:clickable="false" />
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/login1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        >
        <ImageView 
            android:id="@+id/uphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_login_user"
            android:layout_weight="1"
            android:contentDescription="@string/nothing"
            android:layout_gravity="center"
            android:clickable="false"
            />
        <EditText 
            android:id="@+id/user_uphone"
            android:inputType="phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:hint="@string/uphone_hint"
            android:textSize="14sp"
            />
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/login2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >
        <ImageView 
            android:id="@+id/lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_login_lock"
            android:layout_weight="1"
            android:contentDescription="@string/nothing"
            android:layout_gravity="center"
            android:clickable="false"
            />
        <EditText 
            android:id="@+id/user_password"
            android:inputType="textPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:hint="@string/password_hint"
            android:textSize="14sp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_found_index"
        android:text="@string/button_login"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center" />

    <LinearLayout 
        android:id="@+id/login3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >
        <TextView 
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="12sp"
            android:layout_marginLeft="15dp"
            android:gravity="start"
            android:text="@string/forget_password"
            android:clickable="true"
            />
        <TextView 
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="12sp"
            android:layout_marginRight="15dp"
            android:gravity="end"
            android:text="@string/register"
            android:clickable="true"
            />
    </LinearLayout>
</LinearLayout>
